--- a/src/pages/5_Promotions/style.css
+++ b/src/pages/5_Promotions/style.css
@@ -28,17 +28,108 @@
     cursor: pointer;
 }
 
-.feature-img-container{
-    /* transform: translateY(-4rem); */
+/* ===================================== PROMOTION CONTAINER ======================================= */
+
+.promotion-container{
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: 30rem;
+    gap: 2re;
 }
-.service-description{
-    height: 100%;
-    width: 100%;
-    background-color: var(--cl-primary-light);
+
+.feature-img-container{
+    transform: translateY(-4rem);
+    grid-area: 1/1/2/4;
+    overflow: hidden;
+    z-index: 23;
 }
 
 .promo-img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: all 0.3s ease-in-out;
 }
+
+.feature-img-container:hover .promo-img{
+    transform: scale(1.1);
+}
+
+.service-description{
+    position: relative;
+    grid-area: 1/3/2/8;
+    padding: 2rem 2rem 2rem calc(25% + 2rem);
+    background-color: var(--cl-secondary-light);
+}
+
+.service-description::before{
+    content: "";
+    position: absolute;
+    left: calc(25% + 2rem);
+    top: 0;
+    width: 8rem;
+    height: 1rem;
+    background-color: var(--cl-secondary);
+}
+
+/* ================ right ============== */
+
+.feature-img-container-right{
+    transform: translateY(-4rem);
+    grid-area: 1/5/2/8;
+    overflow: hidden;
+    z-index: 23;
+}
+.feature-img-container-right:hover .promo-img{
+    transform: scale(1.1);
+}
+.service-description-right{
+    position: relative;
+    grid-area: 1/1/2/6;
+    padding: 2rem calc(25% + 2rem) 2rem calc(5% + 2rem);
+    background-color: var(--cl-secondary-light);
+}
+
+.service-description-right::before{
+    content: "";
+    position: absolute;
+    right: calc(25% + 2rem);
+    top: 0;
+    width: 8rem;
+    height: 1rem;
+    background-color: var(--cl-secondary);
+}
+
+/*  */
+
+.promo-btn {
+    position: relative;
+    width: max-content;
+    padding: 0.5rem 1.5rem;
+    color: var(--cl-primary);
+    background-color: transparent;
+    border: 1px solid var(--cl-primary);
+    transition: all 0.2s ease-in;
+    z-index: 1;
+  }
+
+.promo-btn::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 0;
+    height: 100%;
+    background-color: var(--cl-primary);
+    transition: all 0.2s ease-in;
+    z-index: -1;
+  }
+  .promo-btn:hover {
+    color: white
+    ;
+    border: 1px solid transparent;
+  }
+  .promo-btn:hover::before {
+    left: 0;
+    width: 100%;
+  }
