--- a/src/pages/5_Promotions/style.css
+++ b/src/pages/5_Promotions/style.css
@@ -109,7 +109,7 @@
     color: var(--cl-primary);
     background-color: transparent;
     border: 1px solid var(--cl-primary);
-    transition: all 0.2s ease-in;
+    transition: all 0.4s ease-in;
     z-index: 1;
   }
 
@@ -121,12 +121,11 @@
     width: 0;
     height: 100%;
     background-color: var(--cl-primary);
-    transition: all 0.2s ease-in;
+    transition: all 0.4s ease-in;
     z-index: -1;
   }
   .promo-btn:hover {
-    color: white
-    ;
+    color: white;
     border: 1px solid transparent;
   }
   .promo-btn:hover::before {
