--- a/src/pages/2_About/style.css
+++ b/src/pages/2_About/style.css
@@ -2,9 +2,71 @@ h1{
     font-size: 3.5rem;
     line-height: 3rem;
 }
-.false-bg{
-    background-image: url("../../assets/image/change/side.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
+.about-images{
+    position: relative;
+    display: grid;
+    padding: 3rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    z-index: 1;
+}
+
+.img-1{
+    position: relative;
+    grid-area: 1/1/5/4;
+    z-index: 1;
+}
+.img-2{
+    grid-area: 3/2/5/4;
+    border: 16px solid white;
+    transform: translate(10%, 20%);
+    z-index: 3;
+}
+
+.about-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+/* ================================ decoration animation =============================== */
+.about-images::before{
+    content: "";
+    position: absolute;
+    top: 3rem;
+    background-color: var(--cl-secondary);
+    left: 1rem;
+    width: 1.5rem;
+    height: 12rem;
+    z-index: 23;
+}
+
+.decor{
+    position: absolute;
+}
+
+.decor_1{
+    width: 25rem;
+    top: 8rem;
+    left: -3rem;
+}
+
+.decor_2{
+    width: 12rem;
+    bottom: 0;
+    left: -1rem;
+    animation: anim 10s infinite;
+}
+
+@keyframes anim{
+    0%{
+        bottom: 0;
+    }
+    50%{
+        bottom: 3rem;
+    }
+    100%{
+        bottom: 0;
+    }
 }
