--- a/src/pages/5_Promotions/style.css
+++ b/src/pages/5_Promotions/style.css
@@ -34,12 +34,10 @@
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: 30rem;
-    gap: 2re;
 }
 
 .feature-img-container{
-    transform: translateY(-4rem);
-    grid-area: 1/1/2/4;
+    grid-area: 1/1/2/8;
     overflow: hidden;
     z-index: 23;
 }
@@ -57,8 +55,8 @@
 
 .service-description{
     position: relative;
-    grid-area: 1/3/2/8;
-    padding: 2rem 2rem 2rem calc(25% + 2rem);
+    grid-area: 2/1/3/8;
+    padding: 2rem 2rem 2rem 2rem;
     background-color: var(--cl-secondary-light);
 }
 
@@ -72,11 +70,26 @@
     background-color: var(--cl-secondary);
 }
 
+
+@media screen and (min-width: 992px){
+    .promotion-container{
+        gap: 2rem;
+    }
+    .feature-img-container{
+        transform: translateY(-4rem);
+        grid-area: 1/1/2/4;
+    }
+
+    .service-description{
+        grid-area: 1/3/2/8;
+        padding: 2rem 2rem 2rem calc(25% + 2rem);
+    }
+}
+
 /* ================ right ============== */
 
 .feature-img-container-right{
-    transform: translateY(-4rem);
-    grid-area: 1/5/2/8;
+    grid-area: 1/1/2/8;
     overflow: hidden;
     z-index: 23;
 }
@@ -85,7 +98,7 @@
 }
 .service-description-right{
     position: relative;
-    grid-area: 1/1/2/6;
+    grid-area: 2/1/3/8;
     padding: 2rem calc(25% + 2rem) 2rem calc(5% + 2rem);
     background-color: var(--cl-secondary-light);
 }
@@ -98,6 +111,21 @@
     width: 8rem;
     height: 1rem;
     background-color: var(--cl-secondary);
+}
+
+@media screen and (min-width: 992px){
+    .feature-img-container-right{
+        transform: translateY(-4rem);
+        grid-area: 1/5/2/8;
+    }
+
+    .service-description-right{
+        position: relative;
+        grid-area: 1/1/2/6;
+        padding: 2rem calc(25% + 2rem) 2rem calc(5% + 2rem);
+        background-color: var(--cl-secondary-light);
+    }
+ 
 }
 
 /*  */
