--- a/src/pages/1_Home/style.css
+++ b/src/pages/1_Home/style.css
@@ -117,13 +117,26 @@ header {
   background-color: silver;
 }
 
+.home-slide-container{
+ position: relative;
+ width: 100%;
+ height: 100%;
+ overflow: hidden;
+}
+
+.hero-bg-img{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
 .home-slide {
   width: 100%;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url(../../assets/image/bg/home-bg.jpg);
+  /* background-image: url(../../assets/image/bg/home-bg.jpg); */
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
